@@ -49,6 +49,16 @@ not funded any of the development work.
 also released into the public domain, which does not impair the obligations of
 users under the GPL for use of the whole code or other sections thereof.
 
+[2] MediaWiki makes use of the Sajax Toolkit by modernmethod,
+	http://www.modernmethod.com/sajax/
+    which has the following license:
+
+       'This work is licensed under the Creative Commons Attribution
+        License. To view a copy of this license, visit
+        http://creativecommons.org/licenses/by/2.0/ or send a letter
+        to Creative Commons, 559 Nathan Abbott Way,
+        Stanford, California 94305, USA.'
+
 Many thanks to the Wikipedia regulars for testing and suggestions.
 
 The official website for mediawiki is located at:
